...
    @IBOutlet weak var mobileContainerView: UIView!
    @IBOutlet weak var mobileSubView: UIView!
    @IBOutlet weak var mobileTF: UITextField!
    // MARK: - OTP View
    @IBOutlet weak var otpContainerView: UIView!
    @IBOutlet weak var moobileNumberLabel: UILabel!
    @IBOutlet weak var firstDigitTF: CustomTextField!
    @IBOutlet weak var secondDigitTF: CustomTextField!
    @IBOutlet weak var thirdDigitTF: CustomTextField!
    @IBOutlet weak var forthDigitTF: CustomTextField!
    @IBOutlet weak var resendOTPButton: UIButton!
    var counter: Int = 0
    var timer: Timer?
    
    var loadingView:LoadingCustomView = LoadingCustomView()
    var mobileNumberEnglish = ""
...
